plugins/espn-golf-api-probe/1.2.2/chat.md
# Chat Log — ESPN Golf API Probe v1.2.2

> Generated by Plugin Studio on 2026-04-09

---

## You

Can you create a scoreboard for golf masters of 2026

---

## Claude

I'll create a Golf Masters 2026 scoreboard widget that fetches live leaderboard data or displays a realistic sample. Since live golf data requires a paid API key, I'll design it to work with a configurable data source and show a beautiful sample leaderboard.

[Plugin code — see plugin.js]

## What this plugin does

Displays a **Masters 2026 leaderboard** with:
- 🟡 Gold Augusta National-themed header
- Player positions with tied indicators (T2, T5…)
- Movement arrows (▲▼) showing position changes
- Total score highlighted green (under par) or red (over par)
- Round-by-round scores with the active round highlighted in blue
- Scrollable table for up to 15 players
- "Thru" column showing current hole or **F** for finished

## Packages used
None — pure vanilla JS/CSS.

## Customization via `defaultConfig`
| Key | Default | Description |
|---|---|---|
| `apiKey` | `''` | Sportradar Golf API key for live data |
| `maxPlayers` | `15` | How many rows to show |

> **Note:** The widget ships with **realistic sample data** for Round 3. To get live scores, enter a [Sportradar Golf API](https://developer.sportradar.com/docs/read/golf/Golf_v3) key in Settings — the field mapping may need minor adjustment depending on the exact response shape.

---

## You

Where can I find the API key?

---

## Claude

The **Sportradar Golf API** requires a paid subscription, so it's not ideal for a quick setup. Here are your best options:

---

## Free / Easy Options

### 1. 🟢 ESPN API (Unofficial, Free, No Key)
ESPN has an undocumented public API that returns live golf scores. No signup needed:
[Plugin code — see plugin.js]
This is the easiest option — I can update the widget to use this automatically.

---

### 2. 🟡 The Sports DB (Free tier, No Key)
[thesportsdb.com](https://www.thesportsdb.com/api.php) has a free tier with no API key required for basic lookups. Limited golf data though.

---

### 3. 🔴 Sportradar (Paid)
- Go to [developer.sportradar.com](https://developer.sportradar.com)
- Create an account → select **Golf v3 Trial** (free trial available)
- Trial gives ~1,000 calls/month

---

### 4. 🔴 SportsData.io (Paid)
- Go to [sportsdata.io](https://sportsdata.io/developers/api-documentation/golf)
- Free trial available with a promo code

---

## My Recommendation

Let me **update the widget to use the ESPN unofficial API** — it requires **no API key**, is free, and returns live Masters leaderboard data automatically. Want me to do that?

---

## You

If its okay. Please validate before

---

## Claude

Let me test the ESPN API endpoint first to make sure it actually returns Masters data before building around it.

[Plugin code — see plugin.js]

However, since I can't run browser code directly, let me use `api.fetch()` to probe it from within a **diagnostic widget** — install this first and it'll show you exactly what comes back:

[Plugin code — see plugin.js]

### What to do

1. **Install this probe widget** — it'll hit 3 ESPN endpoints and report back within seconds
2. **Share the output here** — tell me which ones show ✅ and what event names/statuses appear
3. I'll then build the real scoreboard widget around whichever endpoint works best

This way we know exactly what data shape we're dealing with before writing the full widget. 🏌️

---

## You

🔍 GET https://site.api.espn.com/apis/site/v2/sports/golf/pga/scoreboard
❌ FAILED — Unterminated string in JSON at position 9872 (line 1 column 9873)


🔍 GET https://site.api.espn.com/apis/site/v2/sports/golf/leaderboard?league=pga
❌ FAILED — Unterminated string in JSON at position 14983 (line 1 column 14984)


🔍 GET https://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events?limit=5
⚠️  OK but unexpected shape — keys: $meta, count, pageIndex, pageSize, pageCount, items
   {"$meta":{"parameters":{"season":["2026"],"seasontypes":["2"],"dates":["20260409"]}},"count":1,"pageIndex":1,"pageSize":…

---

## Claude

Great intel! Here's what we learned:

- **Endpoints 1 & 2** — return data but the JSON is **truncated/malformed** (too large, the proxy cuts it off)
- **Endpoint 3** — works perfectly ✅ and returned a **2026 event** with an `items` array of event URLs

The third endpoint gives us event links we can follow to get the actual leaderboard. Let me probe deeper with a smarter widget that follows those links:

[Plugin code — see plugin.js]

### What this does
1. **Follows the `$ref` link** from the event list to get the actual event
2. **Drills into competitions → leaderboard** step by step
3. **Shows the first competitor's raw data** so we know exact field names

Paste the output and I'll build the real scoreboard immediately. 🏌️

---

## You

Fetching event list... ✅ Events found: 1 Step 2 — Following event: http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941?lang=en®ion=us ✅ Event name: Masters Tournament Status: In Progress | Date: 2026-04-09T04:00Z Keys: $ref, id, guid, uid, alternateIds, date, endDate, name, shortName, season, seasonType, timeValid, competitions, links, venues, league, defendingChampion, tournament, status, playoffType, courses, primary, hasPlayerStats, hasCourseStats, isCupPlayoff, isSignature Step 3 — Looking for competitions... ⚠️ No competitions/$ref. Showing event shape: { "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941?lang=en®ion=us", "id": "401811941", "guid": "8c0e8245-22ab-34bd-9515-5aed0b8e12c2", "uid": "s:1100~l:1106~e:401811941", "alternateIds": { "sdr": "401811941" }, "date": "2026-04-09T04:00Z", "endDate": "2026-04-12T04:00Z", "name": "Masters Tournament", "shortName": "Masters Tournament", "season": { "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026?lang=en®ion=us" }, "seasonType": { "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/types/2?lang=en®ion=us" }, "timeValid": false, "competitions": [ { "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941?lang=en®ion=us", "id": "401811941", "uid": "s:1100~l:1106~e:401811941~c:401811941", "date": "2026-04-09T04:00Z", "endDate": "2026-04-12T04:00Z", "s

---

## Claude

Perfect! We have the competition `$ref` URL. Now let me probe the competition endpoint to find the leaderboard structure:

[Plugin code — see plugin.js]

### What this does
- Hits the **exact competition URL** we found in the previous probe
- Checks if `competitors` is inline or behind `$ref` links
- Fetches the first competitor and dumps **all fields** so we see scores, round data, position etc.

Paste the output and I'll build the real scoreboard! 🏌️

---

## You

Fetching competition...
✅ Competition keys: $ref, id, uid, date, endDate, scoringSystem, necessary, timeValid, neutralSite, divisionCompetition, conferenceCompetition, previewAvailable, recapAvailable, boxscoreAvailable, lineupAvailable, gamecastAvailable, playByPlayAvailable, conversationAvailable, commentaryAvailable, pickcenterAvailable, summaryAvailable, liveAvailable, ticketsAvailable, shotChartAvailable, timeoutsAvailable, possessionArrowAvailable, onWatchESPN, recent, bracketAvailable, wallclockAvailable, highlightsAvailable, gameSource, boxscoreSource, playByPlaySource, linescoreSource, statsSource, competitors, status, broadcasts, leaders, dataFormat, holeByHoleSource

competitors is array: true, length: 91
First competitor is $ref: http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en®ion=us
Fetching first competitor...
✅ Competition keys: $ref, id, uid, date, endDate, scoringSystem, necessary, timeValid, neutralSite, divisionCompetition, conferenceCompetition, previewAvailable, recapAvailable, boxscoreAvailable, lineupAvailable, gamecastAvailable, playByPlayAvailable, conversationAvailable, commentaryAvailable, pickcenterAvailable, summaryAvailable, liveAvailable, ticketsAvailable, shotChartAvailable, timeoutsAvailable, possessionArrowAvailable, onWatchESPN, recent, bracketAvailable, wallclockAvailable, highlightsAvailable, gameSource, boxscoreSource, playByPlaySource, linescoreSource, statsSource, competitors, status, broadcasts, leaders, dataFormat, holeByHoleSource

competitors is array: true, length: 91
First competitor is $ref: http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en®ion=us
Fetching first competitor...

✅ Competitor keys: $ref, id, uid, type, athlete, status, score, linescores, statistics, movement, amateur

Full competitor sample:
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en®ion=us",
  "id": "9938",
  "uid": "s:1100~l:1106~a:9938",
  "type": "athlete",
  "athlete": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938?lang=en®ion=us"
  },
  "status": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/status?lang=en®ion=us"
  },
  "score": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/score?lang=en®ion=us"
  },
  "linescores": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/linescores?lang=en®ion=us"
  },
  "statistics": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/statistics?lang=en®ion=us"
  },
  "movement": 0,
  "amateur": false
}

✅ Competitor keys: $ref, id, uid, type, athlete, status, score, linescores, statistics, movement, amateur

Full competitor sample:
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en®ion=us",
  "id": "9938",
  "uid": "s:1100~l:1106~a:9938",
  "type": "athlete",
  "athlete": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938?lang=en®ion=us"
  },
  "status": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/status?lang=en®ion=us"
  },
  "score": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/score?lang=en®ion=us"
  },
  "linescores": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/linescores?lang=en®ion=us"
  },
  "statistics": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/statistics?lang=en®ion=us"
  },
  "movement": 0,
  "amateur": false
}

---

## Claude

Excellent! Now I know the full structure. Everything is behind `$ref` links — athlete name, score, status, linescores all need separate fetches. That means fetching 91 players × 4 endpoints each would be way too many requests. 

Let me do one more targeted probe to find if there's a **bulk leaderboard endpoint** or if the `leaders` key on the competition has what we need:

[Plugin code — see plugin.js]

### What this probes
1. **`leaders`** on the competition — might be a pre-built sorted leaderboard (ideal!)
2. **`/competitors?limit=3`** — checks if we can get bulk inline data in one call
3. **One full player fetch** (athlete + score + status + linescores in parallel) — so we know exact field names for name, total score, thru hole, and round scores

Paste the results and I'll build the final widget! 🏌️

---

## You

Step 1 — Fetching competition to inspect leaders...
leaders type: object
leaders sample: {"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/leaders?lang=en&region=us"}

Step 2 — Try competitors with inline expand...
Keys: count, pageIndex, pageSize, pageCount, items
Sample: {"count":91,"pageIndex":1,"pageSize":3,"pageCount":31,"items":[{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en&region=us","id":"9938","uid":"s:1100~l:1106~a:9938","type":"athlete","order":1,"athlete":{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938?lang=en&region=us"},"status":{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/compet

Step 3 — Fetching athlete, score, status for competitor 9938...
❌ ERROR: Unterminated string in JSON at position 939 (line 1 column 940)

---

## Claude

The `/leaders` endpoint is a `$ref` we can follow, and the competitors endpoint supports **pagination** (`pageSize`, `pageCount: 31`). The athlete fetch is getting truncated again.

Let me probe the **leaders endpoint** directly — this is likely a pre-sorted leaderboard with all the data we need in one shot:

[Plugin code — see plugin.js]

### What this probes
- Hits the **leaders `$ref` URL** directly we found in the previous step
- Dumps all keys and the first few entries
- Drills into `categories` or `items` if present — leaders endpoints often return a pre-ranked list with scores inline

Paste the output! Almost there 🏌️

---

## You

Probing leaders endpoint…
Fetching: http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/leaders?lang=en&region=us
✅ Leaders keys: $ref, id, name, abbreviation, type, categories

Full leaders sample:
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/leaders?lang=en&region=us",
  "id": "0",
  "name": "Total",
  "abbreviation": "Total",
  "type": "total",
  "categories": [
    {
      "name": "driveDistAvg",
      "displayName": "Driving Distance",
      "shortDisplayName": "Driving Distance",
      "abbreviation": "YDS/DRV",
      "leaders": [
        {
          "displayValue": "346.5",
          "value": 346.5,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/4921329?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/4921329/statistics?lang=en&region=us"
          }
        },
        {
          "displayValue": "337.2",
          "value": 337.20001220703125,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/3470?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/3470/statistics?lang=en&region=us"
          }
        },
        {
          "displayValue": "332.7",
          "value": 332.6700134277344,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/4690755?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/4690755/statistics?lang=en&region=us"
          }
        },
        {
          "displayValue": "331.7",
          "value": 331.6700134277344,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/4375972?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/4375972/statistics?lang=en&region=us"
          }
        },
        {
          "displayValue": "330",
          "value": 330,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/11250?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/11250/statistics?lang=en&region=us"
          }
        },
        {
          "

Categories count: 4
First category keys: name, displayName, shortDisplayName, abbreviation, leaders
Leaders in first category: 25
First leader: {
  "displayValue": "346.5",
  "value": 346.5,
  "rel": [
    "athlete"
  ],
  "athlete": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/4921329?lang=en&region=us"
  },
  "statistics": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/4921329/statistics?lang=en&region=us"
  }
}
✅ Leaders keys: $ref, id, name, abbreviation, type, categories

Full leaders sample:
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/leaders?lang=en&region=us",
  "id": "0",
  "name": "Total",
  "abbreviation": "Total",
  "type": "total",
  "categories": [
    {
      "name": "driveDistAvg",
      "displayName": "Driving Distance",
      "shortDisplayName": "Driving Distance",
      "abbreviation": "YDS/DRV",
      "leaders": [
        {
          "displayValue": "346.5",
          "value": 346.5,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/4921329?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/4921329/statistics?lang=en&region=us"
          }
        },
        {
          "displayValue": "337.2",
          "value": 337.20001220703125,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/3470?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/3470/statistics?lang=en&region=us"
          }
        },
        {
          "displayValue": "332.7",
          "value": 332.6700134277344,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/4690755?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/4690755/statistics?lang=en&region=us"
          }
        },
        {
          "displayValue": "331.7",
          "value": 331.6700134277344,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/4375972?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/4375972/statistics?lang=en&region=us"
          }
        },
        {
          "displayValue": "330",
          "value": 330,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/11250?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/11250/statistics?lang=en&region=us"
          }
        },
        {
          "

Categories count: 4
First category keys: name, displayName, shortDisplayName, abbreviation, leaders
Leaders in first category: 25
First leader: {
  "displayValue": "346.5",
  "value": 346.5,
  "rel": [
    "athlete"
  ],
  "athlete": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/4921329?lang=en&region=us"
  },
  "statistics": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/4921329/statistics?lang=en&region=us"
  }
}

---

## Claude

The leaders endpoint only has stats categories (driving distance, etc.) — **not a leaderboard**. But we now know the competitors endpoint gives us paginated players with IDs. 

The best strategy is: fetch **one page of competitors** (get IDs + order), then fetch each player's **score + status + athlete** in parallel batches. Let me probe one competitor's sub-endpoints to confirm field names:

[Plugin code — see plugin.js]

### What this probes
- Hits all **4 sub-endpoints in parallel** for competitor `9938` (currently position 1 / tournament leader)
- **Score** → total score value and display
- **Status** → thru hole, tee time, cut status
- **Athlete** → name, country, headshot URL
- **Linescores** → round-by-round scores

Paste the output and I'll build the real scoreboard immediately! 🏌️

---

## You

Fetching 4 sub-endpoints in parallel for competitor 9938...
❌ SCORE parse error: Unexpected end of JSON input
❌ STATUS parse error: Unterminated string in JSON at position 319 (line 1 column 320)
❌ ATHLETE parse error: Unterminated string in JSON at position 939 (line 1 column 940)
❌ LINESCORES parse error: Unterminated string in JSON at position 662 (line 1 column 663)

---

## Claude

All 4 endpoints are getting truncated by the proxy. The responses are too large individually. Let me try a different approach — the **summary endpoint** which is a known ESPN pattern that returns everything in one compact response:

[Plugin code — see plugin.js]

### What this tries
1. **`/summary?event=`** — the most promising, used by ESPN's own scorepage, returns everything in one payload
2. **Scoreboard with `limit=1`** — smaller payload, might not truncate
3. **`?enable=`** — ESPN sometimes supports inline expansion via query params
4. **Score-only endpoint** — smallest possible payload
5. **Competitors with limit=5** — checks if `order` field is inline (gives us ranking without extra fetches)

Paste results and we'll crack it! 🏌️

---

## You

❌ FETCH ERROR: Failed to fetch

🔍 Scoreboard limit=1
URL: https://site.api.espn.com/apis/site/v2/sports/golf/pga/scoreboard?limit=1
Size: 9958 chars
⚠️ Truncated JSON (9958 chars) — first 400:
{"leagues":[{"id":"1106","uid":"s:1100~l:1106","name":"PGA TOUR","abbreviation":"PGA","slug":"pga","season":{"year":2026,"startDate":"2026-01-08T05:00Z","endDate":"2026-12-06T05:00Z","displayName":"2026","type":{"id":"2","type":2,"name":"Regular Season","abbreviation":"reg"}},"logos":[{"href":"https://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/pgatour.png","width":500,"height":500,"alt"

🔍 Competitor ?enable=
URL: https://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?enable=athlete,score,status,linescores
Size: 1014 chars
✅ Valid JSON — keys: $ref, id, uid, type, athlete, status, score, linescores, statistics, movement, amateur

🔍 Score only (small?)
URL: https://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/score
Size: 247 chars
✅ Valid JSON — keys: $ref, value, displayValue, completedRoundsValue, completedRoundsDisplayValue
value: 63, displayValue: -5

🔍 Athlete headshot only
URL: https://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938/headshot
Size: 52 chars
✅ Valid JSON — keys: error

🔍 Competitors page1 limit=5
URL: https://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors?limit=5&page=1
Size: 5197 chars
✅ Valid JSON — keys: count, pageIndex, pageSize, pageCount, items
items[0]: {"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en®ion=us","id":"9938","uid":"s:1100~l:1106~a:9938","type":"athlete","order":1,"athlete":{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/20

✅ Done

---

## Claude

Excellent findings! Now I have everything I need:

- ✅ **`/competitors?limit=5&page=N`** — gives us `id` + `order` (ranking), paginated
- ✅ **`/competitors/ID/score`** — tiny response, gives `value` + `displayValue` (e.g. `-5`)
- ✅ **`?enable=athlete,score,status,linescores`** — 1014 chars, valid! This is our key endpoint
- ❌ Athlete headshot — returns error, skip it

The `?enable=` trick works and fits in the proxy limit! Let me probe that response fully to get field names, then I'll build the widget:

[Plugin code — see plugin.js]

Paste the full output of all 4 sections (score, status, athlete, linescores) and I'll build the real scoreboard immediately — we're one step away! 🏌️

---

## You

?enable= response for competitor 9938
Keys: $ref, id, uid, type, athlete, status, score, linescores, statistics, movement, amateur

SCORE:
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/score?lang=en®ion=us"
}
STATUS keys: $ref
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/status?lang=en®ion=us"
}
ATHLETE keys: $ref
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938?lang=en®ion=us"
}
LINESCORES:
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/linescores?lang=en®ion=us"
}

---

## Claude

The `?enable=` trick didn't actually inline the data — still all `$ref` links. But we confirmed the **score endpoint works perfectly** (247 chars, returns `-5`). 

The winning strategy is:
1. Fetch competitors page by page to get **IDs + order**
2. Fetch **`/score`** for each (tiny, 247 chars each) in parallel batches
3. Fetch **`/status`** for each (likely small too)
4. Fetch athlete names from a **different smaller endpoint**

Let me probe status + a smaller athlete endpoint:

[Plugin code — see plugin.js]

### What this probes
- **`/status`** — hopefully tiny, gives thru hole + cut info
- **`/athletes/9938/profile`** — alternate athlete endpoint, might be smaller
- **`/athletes/9938`** — base athlete endpoint, checking size
- **`/linescores`** — checking exact size + field names
- **Competitors limit=10** — checking if any inline name fields exist

Paste results and I'll build the real widget! 🏌️

---
